# AI-assistant

./: .gitignore  README.md  main.py  pyproject.toml
assistant/: __init__.py  main.py
assistant/brain/: config.yml  domain.yml  initRasa.py  intent.json
assistant/brain/actions/: actions.py
assistant/brain/data/: nlu.yml  stories.yml
assistant/helper/: api.py
assistant/setup/: listen.py  speak.py
assistant/systemTask/: app.py  application.py  ar.py  cal.py  ffc.py  minmax.py  note.py  send_email.py  shutdown.py  ss.py  vvv.py  weather.py
assistant/webTask/: webTask.py  websearch.py
setup/: listen.py  speak.py
tasks/: systemTask.py  webTask.py
